--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+
 /.idea/
 /components/cafe.lavilla.food.menu/target/
-/components/cafe.lavilla.food.menu/cafe.lavilla.food.menu.core.iml
-/components/cafe.lavilla.food.menu/target/
-/components/cafe.lavilla.food.menu/cafe.lavilla.food.menu.endpoint.iml
+/components/cafe.lavilla.food.menu/cafe.lavilla.food.menu.iml
 /target/
 /cafe-lavilla-food-menu.iml
